2004-02-13  Pierre Chifflier  <pollux@wzdftpd.net>

	* docs: added notes for FreeBSD (contribution from Roman Bogorodskiy)
	* bugfix: files corrupted after upload on windows (closes: #885559)

2004-02-11  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: incorrect path displayed in NEWDIR event
	* bugfix: debian package with incorrect dependancy on virtual package
	* bugfix: use WZD_MAX_PATH instead of random number for max path length

2004-02-06  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: segfault in socket_connect() on FreeBSD

2004-02-05  Pierre Chifflier  <pollux@wzdftpd.net>

	* optimization: removed strcasecmp/strncpy in perm_find_create
	* bugfix: compile error with ipv6 on FreeBSD

2004-02-02  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: site link create/remove (win32/visual)

2004-01-30  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: site link create/remove (posix platforms)

2004-01-27  Pierre Chifflier  <pollux@wzdftpd.net>

	* --- cvs commit TAG: rel-0-2

	* feature: site unlock file

2004-01-26  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: incorrect order of arguments in ident request
	* bugfix: socket_connect not working on visual

2004-01-23  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: missing \0 on short msg replies (closes: broken SIZE command)
	* bugfix: wrong locking query method used (visual)
	* bugfix: wrong length showed in log for empty files
	* bugfix: files not locked during upload
	* bugfix: files opened in wrong memory space for upload (visual)
	* bugfix: wzd_cache_gets no working for oneliners (closes: site msg
	show not working for one-line messages).

2004-01-21  Pierre Chifflier  <pollux@wzdftpd.net>

	* visual: fix build for release version
	* visual: removed some warnings

2004-01-19  Pierre Chifflier  <pollux@wzdftpd.net>

	* visual: locking files routines

2004-01-15  Pierre Chifflier  <pollux@wzdftpd.net>

	* visual: added tools

2004-01-12  Pierre Chifflier  <pollux@wzdftpd.net>
